codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1243
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab    Send message                             "
"  @        Mention files        ⇧tab   Permissions                              "
"  !        Shell command        /plan  Toggle Plan mode                         "
"  ⌃j       New line             ⌥,     Less reasoning                           "
"  ⌃v       Paste image          ⌥.     More reasoning                           "
"  ⌃g       External editor      f8     Voice                                    "
"  ⌃r       Search history       f4     Inspect activity                         "
"  esc esc  Edit last message    ⌃c     Quit                                     "
"                                                                                "
"                                Transcript (open first)                         "
"                                ⌃t            Open transcript                   "
"                                f3            Find text                         "
"                                pgup / pgdn   Scroll                            "
"                                ⌃space        Start selection                   "
"                                ⌃home / ⌃end  Top / latest                      "
"                                ⇧⌥, / ⇧⌥.     Top / latest                      "
"                                                                                "
"  /keymap customize                                                             "
