codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_default.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? for shortcuts                                              context unknown  "
