codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_running.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1243
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab   Queue message                             "
"  @        Mention files        ⇧tab  Permissions                               "
"  !        Shell command        ⌥,    Less reasoning                            "
"  ⌃j       New line             ⌥.    More reasoning                            "
"  ⌃v       Paste image          f8    Voice                                     "
"  ⌃g       External editor      f4    Inspect activity                          "
"  ⌃r       Search history       ⌃c    Interrupt                                 "
"  esc esc  Edit last message                                                    "
"                                Transcript (open first)                         "
"                                ⌃t            Open transcript                   "
"                                f3            Find text                         "
"                                pgup / pgdn   Scroll                            "
"                                ⌃space        Start selection                   "
"                                ⌃home / ⌃end  Top / latest                      "
"                                ⇧⌥, / ⇧⌥.     Top / latest                      "
"                                                                                "
"  /keymap customize                                                             "
