codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_disabled_context_right.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? for shortcuts · Plan mode (/plan to exit)                                                         50% context left  "
