codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_enabled_mode_right.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"                                                                                             Plan mode (/plan to exit)  "
